[tool.poetry]
name = "api-list-cripto"
version = "0.1.0"
description = ""
authors = ["Andre Emidio <andresjc2008@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
requests = "^2.28.0"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
